--- a/styles/Nunito.css
+++ b/styles/Nunito.css
@@ -1,5 +1,19 @@
 @font-face {
   font-family: 'nunito';
+  src: url('/fonts/Nunito-ExtraLight.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nunito';
+  src: url('/fonts/Nunito-Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nunito';
   src: url('/fonts/Nunito-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
@@ -30,5 +44,12 @@
   font-family: 'nunito';
   src: url('/fonts/Nunito-ExtraBold.woff2') format('woff2');
   font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nunito';
+  src: url('/fonts/Nunito-Black.woff2') format('woff2');
+  font-weight: 900;
   font-style: normal;
 }
